--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+ 
     <title>React App</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
@@ -41,7 +41,7 @@
           );
         }
       })(window.location);
-    </script> -->
+    </script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
